--- a/app/views/toppings/index.html.erb
+++ b/app/views/toppings/index.html.erb
@@ -1,21 +1,29 @@
-<div class="w-full">
+<div class="container mx-auto py-8">
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <div class="p-4 mb-6 bg-green-50 text-green-700 border border-green-200 rounded-md shadow-sm" id="notice">
+      <%= notice %>
+    </div>
   <% end %>
 
   <% content_for :title, "Toppings" %>
 
-  <div class="flex justify-between items-center">
-    <h1 class="font-bold text-4xl">Toppings</h1>
-    <%= link_to "New topping", new_topping_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+  <div class="flex justify-between items-center mb-10">
+    <h1 class="font-extrabold text-5xl text-gray-800 tracking-tight">Toppings</h1>
+    <%= link_to "New Topping", new_topping_path, class: "inline-block bg-blue-600 text-white py-3 px-6 rounded-full font-medium shadow-lg hover:bg-blue-700 focus:outline-none transition duration-200 mr-3" %>
+    <%= link_to "Home", root_path, class: "inline-block bg-blue-600 text-white py-3 px-6 rounded-full font-medium shadow-lg hover:bg-blue-700 focus:outline-none transition duration-200" %>
   </div>
 
-  <div id="toppings" class="min-w-full">
+  <div id="toppings" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
     <% @toppings.each do |topping| %>
-      <%= render topping %>
-      <p>
-        <%= link_to "Show this topping", topping, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-      </p>
+      <div class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:shadow-lg transition-shadow duration-200 p-6">
+        <h3 class="mb-2 text-2xl font-bold tracking-tight text-gray-900"><%= topping.name %></h3>
+        
+        <p class="mb-3 font-normal text-gray-700">
+
+          <%= link_to "Show", topping, class: "rounded-lg py-2 px-4 bg-blue-500 text-white font-medium hover:bg-blue-600 transition-colors duration-200" %>
+          <%= link_to "Edit", edit_topping_path(topping), class: "rounded-lg py-2 px-4 bg-blue-500 text-white font-medium hover:bg-blue-600 transition-colors duration-200" %>
+        </p>
+      </div>
     <% end %>
   </div>
 </div>
